@@ -151,7 +151,6 @@ if test "$ac_cv_phaml_prefix" != ""; then
   AC_MSG_RESULT(phaml location: $ac_cv_phaml_prefix)
   AC_MSG_CHECKING([for PHAML interface])
   AC_LINK_IFELSE([AC_LANG_PROGRAM([],[use phaml])],AC_MSG_RESULT([yes]),AC_MSG_FAILURE([Can not link to PHAML Library]))
-  AC_CONFIG_FILES([libphaml/Makefile])
 fi
 AM_CONDITIONAL(USE_PHAML, test "$ac_cv_phaml_prefix" != "")
 AC_SUBST(ac_cv_phaml_prefix)
@@ -347,6 +346,7 @@ AC_CONFIG_FILES([Makefile m4macros/Makefile scripts/Makefile \
                 doc/num/Makefile doc/num/figs/Makefile doc/num/gnu/Makefile \
                 doc/doclets/Makefile doc/doclets/figs/Makefile \
                 doc/tut/Makefile])
+AC_CONFIG_FILES([libphaml/Makefile])
 AC_CONFIG_FILES([make.rules])
 AC_CONFIG_FILES([doc/common/version.tex])
 AC_CONFIG_FILES([glimmer-cism-config libglimmer/glimmer_vers.F90.in])
