@@ -1,4 +1,8 @@
 2010-07-05 Magnus Hagdorn
+ * configure.in: always generate libphaml/Makefile so sources get distributed
+ * libphaml/Makefile.am: do not distribute external files
+
+2010-07-05 Magnus Hagdorn
  * ChangeLOg: bring Bill and myself back from the future
  * NEWS: updated
  * configure.in: bumped version to 1.6.0
